<resources>
    <string name="app_name">Pokédex</string>
    <string name="ui_language">Português (PT-BR)</string>
    <string name="data_language">English (US)</string>

    <!-- Strings for bottom navigation menu -->
    <string name="pokedex_home_button">Pokedéx</string>
    <string name="regions_button">Regiões</string>
    <string name="favorites_button">Favoritos</string>
    <string name="profile_button">Conta</string>


    <!-- Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Todos os Pokémons em um só Lugar</string>
    <string name="second_slide_title">Mantenha sua\nPokedéx atualizada</string>
    <string name="login_register_title">Está pronto para essa aventura?</string>


    <!--Onboarding Descriptions-->
    <string name="first_slide_desc">Acesse uma vasta lista de Pokémon de todas as gerações já feitas pela Nintendo</string>
    <string name="second_slide_desc">Cadastre-se e mantenha seu perfil, pokémon favoritos, configurações e muito mais, salvos no aplicativo, mesmo sem conexão com a internet.</string>
    <string name="login_register_desc">Basta criar uma conta e começar a explorar o mundo Pokémon hoje!</string>


    <!--Onboarding Buttons-->
    <string name="continue_button">Continuar</string>
    <string name="let_get_started_button">Vamos começar!</string>
    <string name="skip_button">Pular</string>
    <string name="create_account_button">Criar conta</string>
    <string name="already_has_account_button">Já tenho uma conta</string>
    <string name="search_bar_hint">Procurar Pókemon</string>


    <!--Pokemon Details titles-->
    <string name="weight_title">PESO</string>
    <string name="height_title">ALTURA</string>
    <string name="category_title">CATEGORIA</string>
    <string name="ability_title">HABILIDADE</string>
    <string name="weaknesses_title">Fraquezas</string>

    <!--Regions-->
    <string name="regions_title">Regiões</string>
    <string name="kanto_title">Kanto</string>
    <string name="first_generation_title">1° GERAÇÃO</string>
    <string name="johto_title">Johto</string>
    <string name="second_generation_title">2° GERAÇÃO</string>
    <string name="hoenn_title">Hoenn</string>
    <string name="third_generation_title">3° GERAÇÃO</string>
    <string name="sinnoh_title">Sinnoh</string>
    <string name="fourth_generation_title">4° GERAÇÃO</string>
    <string name="unova_title">Unova</string>
    <string name="fifth_generation_title">5° GERAÇÃO</string>
    <string name="kalos_title">Kalos</string>
    <string name="sixth_generation_title">6° GERAÇÃO</string>
    <string name="alola_title">Alola</string>
    <string name="seventh_generation_title">7° GERAÇÃO</string>
    <string name="galar_title">Galar</string>
    <string name="eighth_generation_title">8° GERAÇÃO</string>
    

    
    <!--Profile-->
    <string name="maintain_updated">Mantenha sua Pokédex\natualizada e participe\ndesse mundo.</string>
    <string name="login_or_register">Entre ou Cadastre-se</string>
    <string name="mega_evolution_label">Mega Evoluções</string>
    <string name="mega_evolution_description">Habilita a exibição de mega\nevoluções.</string>
    <string name="other_evolutions_label">Outras formas</string>
    <string name="other_evolutions_description">Habilita a exibição de formas\nalternativas de pokémon.</string>
    <string name="notifications_title">Notificações</string>
    <string name="pokedex_updates_notification_label">Atualizações na pokédex</string>
    <string name="pokedex_updates_notification_description">Novos Pokémons, habilidades,\ninformações, etc.</string>
    <string name="pokemon_world_notification_label">Mundo Pokémon</string>
    <string name="pokemon_world_notification_description">Acontecimentos e informações\ndo mundo de pokémon.</string>
    <string name="language_label">Idioma</string>
    <string name="ui_language_label">Idioma da interface</string>
    <string name="data_language_label">Idioma das informações em jogo</string>
    <string name="general_label">Geral</string>
    <string name="version_label">Versão</string>
    <string name="terms_conditions_label">Termos e condições</string>
    <string name="terms_conditions_description">Tudo o que você precisa saber.</string>
    <string name="help_central_label">Central de ajuda</string>
    <string name="help_central_description">Precisa de ajuda? Fale conosco.</string>
    <string name="about_label">Sobre</string>
    <string name="about_description">Saiba mais sobre o app.</string>
    <string name="account_information_label">Informações da conta</string>
    <string name="others_label">Outros</string>
    <string name="quit_label">Sair</string>
    <string name="quit_description">Você entrou como</string>





    
    
    <!--Login/Registration-->
    <string name="create_account_title">Criar conta</string>
    <string name="create_account_encouragement_text">Falta pouco para \n explorar esse mundo!</string>
    <string name="create_account_method_text">Como deseja se conectar?</string>
    <string name="continue_with_apple">Continuar com a Apple</string>
    <string name="continue_with_google">Continuar com o Google</string>
    <string name="continue_with_email">Continuar com um Email</string>
    <string name="what_is_your_email">Qual é seu e-mail?</string>
    <string name="email_input_placeholder">E-mail</string>
    <string name="valid_email_warning">Use um endereço de e-mail válido.</string>
    <string name="now">Agora...</string>
    <string name="create_a_password">Crie uma senha</string>
    <string name="password_input_placeholder">Senha</string>
    <string name="strong_password_warning">Sua senha deve ter pelo menos 8 caracteres</string>
    <string name="to_fisish">Pra finalizar</string>
    <string name="what_is_your_name">Qual o seu nome?</string>
    <string name="username_input_placeholder">Nome</string>
    <string name="will_be_your_name_warning">Esse será seu nome de usuário no aplicativo.</string>
    <string name="account_created">Sua conta foi criada\ncom Sucesso!</string>
    <string name="account_created_welcome">Seja bem-vindo, treinador! Estamos\nanimados para acompanhar sua jornada.</string>

    <string name="login_title">Entrar</string>
    <string name="good_to_see">Que bom te ver aqui novamente!</string>
    <string name="welcome_back">Bem vindo de volta!</string>
    <string name="fill_your_data">Preencha os dados</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="successful_welcome_back">Bem-vindo de volta,\nTreinador!!</string>
    <string name="hope">Esperamos que tenha tido uma longa jornada\n desde a última vez em que nos visitou.</string>

</resources>